fix not scrolling on mobile

--- a/src/styles/components/map.css
+++ b/src/styles/components/map.css
@@ -1,9 +1,9 @@
 .map {
   @apply fixed top-0 bottom-0 right-0 left-0;
-  @apply z-10;
+  @apply z-[-10];
 
   & canvas {
-    touch-action: auto;
+    touch-action: none;
   }
 }
 
